--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@skolozub/react-redux-pagination",
+  "name": "skolozub-react-redux-pagination",
   "version": "0.0.1",
   "description": "Redux pagination for React SPA Apps",
-  "keywords": ["pagination", "redux", "react"],
+  "keywords": [],
   "main": "./src/example/index.js",
   "repository": {
     "type": "git",
@@ -34,5 +34,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
